# collatz

./: ABB.c  ABB.h  CMakeLists.txt  main.c
